gccida/c1/canon_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_rtx/src/alias.c:1532:45: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( v6 == x->fld[0].rtx && result == ( rtx)x[1] ) 
                                            ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_rtx/src/alias.c:1548:34: error: use of undeclared identifier 'machine_mode'
result = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)x + 2), v6, result); 
                                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_rtx/src/obj/alias.o] Error 1
